objects/vlocity_cmt__CalculationMatrix__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Matrix. Used to identify the Matrix across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GroupKey__c</fullName>
        <label>Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubGroupKey__c</fullName>
        <label>Sub Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionsWithLongOutputCount__c</fullName>
        <label>Versions With Long Output Count</label>
        <summaryFilterItems>
            <field>vlocity_cmt__CalculationMatrixVersion__c.vlocity_cmt__UseLongOutput__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__CalculationMatrixVersion__c.vlocity_cmt__CalculationMatrixId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Vlocity Calculation Matrix</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calculation Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrices</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__Grouped</fullName>
        <active>true</active>
        <label>Grouped</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__RowVersioned</fullName>
        <active>true</active>
        <label>Row-Versioned</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>